# pet-project

./: .flake8  .gitignore  README.md  connect-test.py  docker-compose.yml  pyproject.toml  pytest.ini
config/: manager.yaml
manager/: main.py  settings.py  views.py
migrations/: initdb.sql
newstruct/: main.py
newstruct/controllers/: users_controller.py
newstruct/models/: user.py
newstruct/repositories/: users_repository.py
newstruct/services/: users_service.py
newstruct/utils/: db.py
tests/: conftest.py
user_manager/: main.py
user_manager/controllers/: users_controller.py
user_manager/models/: posts.py  user.py
user_manager/repositories/: posts_repository.py  repository.py  users_repository.py
user_manager/services/: posts_service.py  users_service.py
