[tool.poetry]
name = "pet-project"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [
]

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "^3.9.0"
pyyaml = "^6.0.1"
asyncpg = "^0.29.0"


[tool.poetry.group.dev.dependencies]
black = "^23.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
