[tool.poetry]
name = "pet-project"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [
]

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "^3.9.0"
pyyaml = "^6.0.1"
asyncpg = "^0.29.0"
pydantic = "^2.5.2"
pytest = "^7.4.3"
pytest-aiohttp = "^1.0.5"
pytest-asyncio = "^0.23.2"
mypy = "^1.9.0"
stubs = "^1.0.0"
asyncpg-stubs = "^0.29.1"


[tool.poetry.group.dev.dependencies]
black = "^23.11.0"
ipykernel = "^6.27.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
